# checkarium

./: .coverage  .dockerignore  .env.prod.sample  .env.sample  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  demo_dump.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: celery.py  settings.py  urls.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_create_custom_superuser_py.html  z_1df033120bbcc412_load_test_data_py.html  z_1df033120bbcc412_run_telegram_bot_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_views_py.html  z_1ea838694151cac8_wsgi_py.html  z_24e1fa9a9441381d___init___py.html  z_24e1fa9a9441381d_admin_py.html  z_24e1fa9a9441381d_apps_py.html  z_24e1fa9a9441381d_forms_py.html  z_24e1fa9a9441381d_models_py.html  z_24e1fa9a9441381d_services_py.html  z_24e1fa9a9441381d_tests_py.html  z_24e1fa9a9441381d_urls_py.html  z_24e1fa9a9441381d_views_py.html  z_2bb936136b2b1204_0001_initial_py.html  z_2bb936136b2b1204_0002_pet_feeding_notes_py.html  z_2bb936136b2b1204_0003_alter_pet_length_cm_py.html  z_2bb936136b2b1204_0004_pet_is_public_py.html  z_2bb936136b2b1204_0005_alter_pet_is_public_py.html  z_2bb936136b2b1204_0006_alter_event_length_cm_py.html  z_2bb936136b2b1204_0007_alter_pet_is_public_py.html  (+33 more)
nginx/: nginx.conf
(+66 files in other folders)
