[project]
name = "checkarium"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina Chernyshova",email = "newfatto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-django = "^4.12.0"
pytest-cov = "^7.1.0"


[tool.poetry.group.lint.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
mypy = "^1.20.1"

[tool.black]
line-length = 119
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = ["venv", ".venv", "migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]